--- a/financas/.classpath
+++ b/financas/.classpath
@@ -14,5 +14,30 @@
 	<classpathentry kind="lib" path="lib/jboss-logging-annotations-1.2.0.Beta1.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.33-bin.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aop-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-aspects-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-beans-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-build-src-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-support-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-core-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-expression-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-framework-bom-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-instrument-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-instrument-tomcat-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-jdbc-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-jms-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-messaging-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-orm-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-oxm-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-test-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-tx-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-web-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-webmvc-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-webmvc-portlet-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-websocket-4.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/validation-api-1.0.0.GA.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
